/*
 *                    GNU LESSER GENERAL PUBLIC LICENSE
 *                        Version 3, 29 June 2007
 *
 *  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
 *  Everyone is permitted to copy and distribute verbatim copies
 *  of this license document, but changing it is not allowed.
 *
 *
 *   This version of the GNU Lesser General Public License incorporates
 * the terms and conditions of version 3 of the GNU General Public
 * License, supplemented by the additional permissions listed below.
 *
 *   0. Additional Definitions.
 *
 *   As used herein, "this License" refers to version 3 of the GNU Lesser
 * General Public License, and the "GNU GPL" refers to version 3 of the GNU
 * General Public License.
 *
 *   "The Library" refers to a covered work governed by this License,
 * other than an Application or a Combined Work as defined below.
 *
 *   An "Application" is any work that makes use of an interface provided
 * by the Library, but which is not otherwise based on the Library.
 * Defining a subclass of a class defined by the Library is deemed a mode
 * of using an interface provided by the Library.
 *
 *   A "Combined Work" is a work produced by combining or linking an
 * Application with the Library.  The particular version of the Library
 * with which the Combined Work was made is also called the "Linked
 * Version".
 *
 *   The "Minimal Corresponding Source" for a Combined Work means the
 * Corresponding Source for the Combined Work, excluding any source code
 * for portions of the Combined Work that, considered in isolation, are
 * based on the Application, and not on the Linked Version.
 *
 *   The "Corresponding Application Code" for a Combined Work means the
 * object code and/or source code for the Application, including any data
 * and utility programs needed for reproducing the Combined Work from the
 * Application, but excluding the System Libraries of the Combined Work.
 *
 *   1. Exception to Section 3 of the GNU GPL.
 *
 *   You may convey a covered work under sections 3 and 4 of this License
 * without being bound by section 3 of the GNU GPL.
 *
 *   2. Conveying Modified Versions.
 *
 *   If you modify a copy of the Library, and, in your modifications, a
 * facility refers to a function or data to be supplied by an Application
 * that uses the facility (other than as an argument passed when the
 * facility is invoked), then you may convey a copy of the modified
 * version:
 *
 *    a) under this License, provided that you make a good faith effort to
 *    ensure that, in the event an Application does not supply the
 *    function or data, the facility still operates, and performs
 *    whatever part of its purpose remains meaningful, or
 *
 *    b) under the GNU GPL, with none of the additional permissions of
 *    this License applicable to that copy.
 *
 *   3. Object Code Incorporating Material from Library Header Files.
 *
 *   The object code form of an Application may incorporate material from
 * a header file that is part of the Library.  You may convey such object
 * code under terms of your choice, provided that, if the incorporated
 * material is not limited to numerical parameters, data structure
 * layouts and accessors, or small macros, inline functions and templates
 * (ten or fewer lines in length), you do both of the following:
 *
 *    a) Give prominent notice with each copy of the object code that the
 *    Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the object code with a copy of the GNU GPL and this license
 *    document.
 *
 *   4. Combined Works.
 *
 *   You may convey a Combined Work under terms of your choice that,
 * taken together, effectively do not restrict modification of the
 * portions of the Library contained in the Combined Work and reverse
 * engineering for debugging such modifications, if you also do each of
 * the following:
 *
 *    a) Give prominent notice with each copy of the Combined Work that
 *    the Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the Combined Work with a copy of the GNU GPL and this license
 *    document.
 *
 *    c) For a Combined Work that displays copyright notices during
 *    execution, include the copyright notice for the Library among
 *    these notices, as well as a reference directing the user to the
 *    copies of the GNU GPL and this license document.
 *
 *    d) Do one of the following:
 *
 *        0) Convey the Minimal Corresponding Source under the terms of this
 *        License, and the Corresponding Application Code in a form
 *        suitable for, and under terms that permit, the user to
 *        recombine or relink the Application with a modified version of
 *        the Linked Version to produce a modified Combined Work, in the
 *        manner specified by section 6 of the GNU GPL for conveying
 *        Corresponding Source.
 *
 *        1) Use a suitable shared library mechanism for linking with the
 *        Library.  A suitable mechanism is one that (a) uses at run time
 *        a copy of the Library already present on the user's computer
 *        system, and (b) will operate properly with a modified version
 *        of the Library that is interface-compatible with the Linked
 *        Version.
 *
 *    e) Provide Installation Information, but only if you would otherwise
 *    be required to provide such information under section 6 of the
 *    GNU GPL, and only to the extent that such information is
 *    necessary to install and execute a modified version of the
 *    Combined Work produced by recombining or relinking the
 *    Application with a modified version of the Linked Version. (If
 *    you use option 4d0, the Installation Information must accompany
 *    the Minimal Corresponding Source and Corresponding Application
 *    Code. If you use option 4d1, you must provide the Installation
 *    Information in the manner specified by section 6 of the GNU GPL
 *    for conveying Corresponding Source.)
 *
 *   5. Combined Libraries.
 *
 *   You may place library facilities that are a work based on the
 * Library side by side in a single library together with other library
 * facilities that are not Applications and are not covered by this
 * License, and convey such a combined library under terms of your
 * choice, if you do both of the following:
 *
 *    a) Accompany the combined library with a copy of the same work based
 *    on the Library, uncombined with any other library facilities,
 *    conveyed under the terms of this License.
 *
 *    b) Give prominent notice with the combined library that part of it
 *    is a work based on the Library, and explaining where to find the
 *    accompanying uncombined form of the same work.
 *
 *   6. Revised Versions of the GNU Lesser General Public License.
 *
 *   The Free Software Foundation may publish revised and/or new versions
 * of the GNU Lesser General Public License from time to time. Such new
 * versions will be similar in spirit to the present version, but may
 * differ in detail to address new problems or concerns.
 *
 *   Each version is given a distinguishing version number. If the
 * Library as you received it specifies that a certain numbered version
 * of the GNU Lesser General Public License "or any later version"
 * applies to it, you have the option of following the terms and
 * conditions either of that published version or of any later version
 * published by the Free Software Foundation. If the Library as you
 * received it does not specify a version number of the GNU Lesser
 * General Public License, you may choose any version of the GNU Lesser
 * General Public License ever published by the Free Software Foundation.
 *
 *   If the Library as you received it specifies that a proxy can decide
 * whether future versions of the GNU Lesser General Public License shall
 * apply, that proxy's public statement of acceptance of any version is
 * permanent authorization for you to choose that version for the
 * Library.
 */
package com.github.szgabsz91.morpher.transformationengines.lattice.converters;

import com.github.szgabsz91.morpher.core.io.IConverter;
import com.github.szgabsz91.morpher.transformationengines.api.characters.repositories.ICharacterRepository;
import com.github.szgabsz91.morpher.transformationengines.api.wordconverters.IWordConverter;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.Lattice;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.builders.AbstractLatticeBuilder;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.builders.CompleteLatticeBuilder;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.builders.ConsistentLatticeBuilder;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.builders.ILatticeBuilder;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.builders.MaximalConsistentLatticeBuilder;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.builders.MinimalLatticeBuilder;
import com.github.szgabsz91.morpher.transformationengines.lattice.protocolbuffers.CharacterRepositoryTypeMessage;
import com.github.szgabsz91.morpher.transformationengines.lattice.protocolbuffers.LatticeBuilderMessage;
import com.github.szgabsz91.morpher.transformationengines.lattice.protocolbuffers.LatticeBuilderTypeMessage;
import com.github.szgabsz91.morpher.transformationengines.lattice.protocolbuffers.LatticeMessage;
import com.github.szgabsz91.morpher.transformationengines.lattice.protocolbuffers.WordConverterTypeMessage;
import com.google.protobuf.CodedInputStream;

import java.io.IOException;
import java.nio.file.Files;
import java.nio.file.Path;
import java.util.zip.GZIPInputStream;

/**
 * Protocol Buffer converter for the {@link ILatticeBuilder} implementation classes.
 *
 * @author szgabsz91
 */
public class LatticeBuilderConverter implements IConverter<ILatticeBuilder, LatticeBuilderMessage> {

    private final LatticeConverter latticeConverter;
    private final LatticeBuilderTypeConverter latticeBuilderTypeConverter;
    private final WordConverterTypeConverter wordConverterTypeConverter;
    private final CharacterRepositoryTypeConverter characterRepositoryTypeConverter;

    /**
     * Constructor that sets the default {@link LatticeConverter} instance.
     */
    public LatticeBuilderConverter() {
        this.latticeConverter = new LatticeConverter();
        this.latticeBuilderTypeConverter = new LatticeBuilderTypeConverter();
        this.wordConverterTypeConverter = new WordConverterTypeConverter();
        this.characterRepositoryTypeConverter = new CharacterRepositoryTypeConverter();
    }

    /**
     * Converts an {@link ILatticeBuilder} to a {@link LatticeBuilderMessage}.
     *
     * {@inheritDoc}
     */
    @Override
    public LatticeBuilderMessage convert(final ILatticeBuilder latticeBuilder) {
        final AbstractLatticeBuilder abstractLatticeBuilder = (AbstractLatticeBuilder) latticeBuilder;
        final ICharacterRepository characterRepository = abstractLatticeBuilder.getCharacterRepository();
        final IWordConverter wordConverter = abstractLatticeBuilder.getWordConverter();
        final Lattice lattice = latticeBuilder.getLattice();

        this.latticeConverter.setCharacterRepository(characterRepository);
        this.latticeConverter.setWordConverter(wordConverter);

        final CharacterRepositoryTypeMessage characterRepositoryTypeMessage =
                this.characterRepositoryTypeConverter.fromImplementation(characterRepository);
        final WordConverterTypeMessage wordConverterTypeMessage =
                this.wordConverterTypeConverter.fromImplementation(wordConverter);
        final LatticeBuilderTypeMessage latticeBuilderTypeMessage =
                this.latticeBuilderTypeConverter.fromImplementation(latticeBuilder);
        final LatticeMessage latticeMessage = this.latticeConverter.convert(lattice);

        LatticeBuilderMessage.Builder builder = LatticeBuilderMessage.newBuilder()
                .setCharacterRepositoryType(characterRepositoryTypeMessage)
                .setWordConverterType(wordConverterTypeMessage)
                .setLatticeBuilderType(latticeBuilderTypeMessage)
                .setLattice(latticeMessage);

        if (latticeBuilder instanceof CompleteLatticeBuilder completeLatticeBuilder) {
            builder = builder
                    .setSkipFrequencyCalculation(completeLatticeBuilder.isSkipFrequencyCalculation())
                    .setSkipDominantRuleSelection(completeLatticeBuilder.isSkipDominantRuleSelection());
        }
        else if (latticeBuilder instanceof ConsistentLatticeBuilder consistentLatticeBuilder) {
            builder = builder
                    .setSkipFrequencyCalculation(consistentLatticeBuilder.isSkipFrequencyCalculation());
        }
        else if (latticeBuilder instanceof MaximalConsistentLatticeBuilder maximalConsistentLatticeBuilder) {
            final LatticeBuilderMessage internalLatticeBuilderMessage =
                    this.convert(maximalConsistentLatticeBuilder.getConsistentLatticeBuilder());
            builder = builder
                    .setInternalLatticeBuilder1(internalLatticeBuilderMessage);
        }
        else if (latticeBuilder instanceof MinimalLatticeBuilder minimalLatticeBuilder) {
            builder = builder
                    .setInternalLatticeBuilder1(this.convert(minimalLatticeBuilder.getConsistentLatticeBuilder()))
                    .setInternalLatticeBuilder2(this.convert(minimalLatticeBuilder.getCompleteLatticeBuilder()));
        }
        else {
            throw new IllegalArgumentException("Unknown ILatticeBuilder implementation");
        }

        return builder.build();
    }

    /**
     * Converts a {@link LatticeBuilderMessage} to an {@link ILatticeBuilder}.
     *
     * {@inheritDoc}
     */
    @Override
    public ILatticeBuilder convertBack(final LatticeBuilderMessage latticeBuilderMessage) {
        final LatticeBuilderTypeMessage latticeBuilderTypeMessage = latticeBuilderMessage.getLatticeBuilderType();
        final ICharacterRepository characterRepository = this.characterRepositoryTypeConverter.toImplementation(
                latticeBuilderMessage.getCharacterRepositoryType()
        );
        final IWordConverter wordConverter = this.wordConverterTypeConverter.toImplementation(
                latticeBuilderMessage.getWordConverterType()
        );
        final boolean skipFrequencyCalculation = latticeBuilderMessage.getSkipFrequencyCalculation();
        final boolean skipDominantRuleSelection = latticeBuilderMessage.getSkipDominantRuleSelection();

        this.latticeConverter.setCharacterRepository(characterRepository);
        this.latticeConverter.setWordConverter(wordConverter);

        final Lattice lattice = this.latticeConverter.convertBack(latticeBuilderMessage.getLattice());

        if (LatticeBuilderTypeMessage.COMPLETE.equals(latticeBuilderTypeMessage)) {
            return new CompleteLatticeBuilder(
                    characterRepository,
                    wordConverter,
                    skipFrequencyCalculation,
                    skipDominantRuleSelection,
                    lattice
            );
        }

        if (LatticeBuilderTypeMessage.CONSISTENT.equals(latticeBuilderTypeMessage)) {
            return new ConsistentLatticeBuilder(characterRepository, wordConverter, skipFrequencyCalculation, lattice);
        }

        if (LatticeBuilderTypeMessage.MAXIMAL_CONSISTENT.equals(latticeBuilderTypeMessage)) {
            final ConsistentLatticeBuilder consistentLatticeBuilder = (ConsistentLatticeBuilder) this.convertBack(
                    latticeBuilderMessage.getInternalLatticeBuilder1()
            );
            return new MaximalConsistentLatticeBuilder(
                    characterRepository,
                    wordConverter,
                    consistentLatticeBuilder,
                    lattice
            );
        }

        final ConsistentLatticeBuilder consistentLatticeBuilder = (ConsistentLatticeBuilder) this.convertBack(
                latticeBuilderMessage.getInternalLatticeBuilder1()
        );
        final CompleteLatticeBuilder completeLatticeBuilder = (CompleteLatticeBuilder) this.convertBack(
                latticeBuilderMessage.getInternalLatticeBuilder2()
        );
        return new MinimalLatticeBuilder(
                characterRepository,
                wordConverter,
                consistentLatticeBuilder,
                completeLatticeBuilder,
                lattice
        );
    }

    /**
     * Parses the given file and loads the {@link LatticeBuilderMessage} from it.
     *
     * {@inheritDoc}
     */
    @Override
    public LatticeBuilderMessage parse(final Path file) throws IOException {
        try (GZIPInputStream gzipInputStream = new GZIPInputStream(Files.newInputStream(file))) {
            final CodedInputStream codedInputStream = CodedInputStream.newInstance(gzipInputStream);
            codedInputStream.setSizeLimit(Integer.MAX_VALUE);
            return LatticeBuilderMessage.parseFrom(codedInputStream);
        }
    }

}
